# SecureChatApp

./: .env  .replit  README.md  Report_Final.docx  app.py  config.py  main.py  pyproject.toml  replit.nix  requirements.txt  wsgi.py
database/: db.py
encryption/: encryption.py
firebase/: auth.py  firebase_config.py  service_account.json
instance/: chat.db
routes/: auth_routes.py  chat_routes.py  encryption_routes.py
static/css/: main.css
static/js/: auth.js  chat.js  encryption.js
templates/: base.html  chat.html  index.html  login.html  profile.html  signup.html
